# building-agentic-applications-book

./: .gitignore  CITATION.cff  LICENSE-CONTENT.md  LICENSE.md  README.md
book/: README.md  build-manifest.json  first-draft-validation.json
book-components/: README.md  TRACKING.md
book-components/authoring/: code-and-screenshot-policy.md  page-allocation.md  reader-personas.md  source-and-evidence-policy.md  style-guide.md  terminology.md
book-components/images/: FIGURE MANIFEST.md
book-components/images/diagrams/: README.md  generate-final-deterministic.mjs  generate-wave1-l2-l3.mjs
book-components/keypoints/: MASTER OUTLINE.md  chapter-titles-guide.md
book-components/materials/: SOURCE REGISTRY.md
book-components/scripts/: README.md  build_review_pdf.py  build_source_registry.py  count_words.py  lint_manuscript.py  manuscript-lint-config.json  render_review_pdf.py  validate_final_pdf.py
book-components/sections/: 00-front-matter.md
builder-guide/: README.md  level-1-application-agents.md  level-2-machine-agents.md  level-3-organizational-agents.md  production.md
companion/: .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
companion/python/: pyproject.toml
companion/python/src/book_agent/: __init__.py  ledger_graph.py
companion/python/tests/: test_ledger_graph.py
companion/src/: index.ts
companion/tests/: governed-action.test.ts  machine-policy.test.ts  production.test.ts  shared-state.test.ts  workspace.test.ts
reference-projects/: README.md
(+95 files in other folders)
